--- a/.vercel/output/static/200.html
+++ b/.vercel/output/static/200.html
@@ -11,18 +11,18 @@
 <style>::-webkit-scrollbar{width:8px}::-webkit-scrollbar-thumb{background:#888;border-radius:4px}::-webkit-scrollbar-thumb:hover{background:#555}.markdown-content ol{margin:1rem 0!important;padding-left:2rem!important}.markdown-content ol ol{margin:.5rem 0!important}.markdown-content li{margin:.25rem 0!important}</style>
 <style>.v-application{background:rgb(var(--v-theme-background));color:rgba(var(--v-theme-on-background),var(--v-high-emphasis-opacity));display:flex}.v-application__wrap{backface-visibility:hidden;display:flex;flex:1 1 auto;flex-direction:column;max-width:100%;min-height:100vh;min-height:100dvh;position:relative}</style>
 <link rel="stylesheet" href="/_nuxt/entry.RiT3v3I3.css" crossorigin>
-<link rel="modulepreload" as="script" crossorigin href="/_nuxt/uQ56CW8K.js">
+<link rel="modulepreload" as="script" crossorigin href="/_nuxt/Bv4Txu0p.js">
 <link rel="prefetch" as="style" crossorigin href="/_nuxt/default.FNQ8xPFr.css">
 <link rel="prefetch" as="style" crossorigin href="/_nuxt/loader.D4QRIqqw.css">
 <link rel="prefetch" as="style" crossorigin href="/_nuxt/VRow.D0S0a0cH.css">
 <link rel="prefetch" as="style" crossorigin href="/_nuxt/VBtn.64hRg5eu.css">
-<link rel="prefetch" as="script" crossorigin href="/_nuxt/wT9DqNd_.js">
-<link rel="prefetch" as="script" crossorigin href="/_nuxt/4vBHdpAh.js">
-<link rel="prefetch" as="script" crossorigin href="/_nuxt/7jd6UDnI.js">
-<link rel="prefetch" as="script" crossorigin href="/_nuxt/5blY1rzZ.js">
-<link rel="prefetch" as="script" crossorigin href="/_nuxt/V7RztZvp.js">
-<link rel="prefetch" as="script" crossorigin href="/_nuxt/D-Fc6D4z.js">
-<link rel="prefetch" as="script" crossorigin href="/_nuxt/BnB0ggJe.js">
-<link rel="prefetch" as="script" crossorigin href="/_nuxt/CNDYGtQn.js">
-<script type="module" src="/_nuxt/uQ56CW8K.js" crossorigin></script></head><body><div id="__nuxt"></div><div id="teleports"></div><script type="application/json" data-nuxt-data="nuxt-app" data-ssr="false" id="__NUXT_DATA__">[{"prerenderedAt":1,"serverRendered":2},1753453979254,false]</script>
-<script>window.__NUXT__={};window.__NUXT__.config={public:{content:{wsUrl:""},mdc:{components:{prose:true,map:{}},headings:{anchorLinks:{h1:false,h2:true,h3:true,h4:true,h5:false,h6:false}}}},app:{baseURL:"/",buildId:"5c4823eb-8a09-40e5-9791-f082b924933c",buildAssetsDir:"/_nuxt/",cdnURL:""}}</script></body></html>
+<link rel="prefetch" as="script" crossorigin href="/_nuxt/BCb6l8Yd.js">
+<link rel="prefetch" as="script" crossorigin href="/_nuxt/BVJNEW_l.js">
+<link rel="prefetch" as="script" crossorigin href="/_nuxt/CB6V9Pyq.js">
+<link rel="prefetch" as="script" crossorigin href="/_nuxt/FSqh4XC0.js">
+<link rel="prefetch" as="script" crossorigin href="/_nuxt/CzzZCKB3.js">
+<link rel="prefetch" as="script" crossorigin href="/_nuxt/Do1bZXNl.js">
+<link rel="prefetch" as="script" crossorigin href="/_nuxt/DIS0Lbls.js">
+<link rel="prefetch" as="script" crossorigin href="/_nuxt/C8v0D5Th.js">
+<script type="module" src="/_nuxt/Bv4Txu0p.js" crossorigin></script></head><body><div id="__nuxt"></div><div id="teleports"></div><script type="application/json" data-nuxt-data="nuxt-app" data-ssr="false" id="__NUXT_DATA__">[{"prerenderedAt":1,"serverRendered":2},1753454784770,false]</script>
+<script>window.__NUXT__={};window.__NUXT__.config={public:{content:{wsUrl:""},mdc:{components:{prose:true,map:{}},headings:{anchorLinks:{h1:false,h2:true,h3:true,h4:true,h5:false,h6:false}}}},app:{baseURL:"/",buildId:"81797f2f-bd6b-4e47-833b-721de96a6880",buildAssetsDir:"/_nuxt/",cdnURL:""}}</script></body></html>
